[project]
name = "rehydrate-analysis"
version = "0.0.0"
description = "Baseline analysis environment for rehydrate."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "marimo>=0.11.0",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "openai>=2.37.0",
    "pandas>=3.0.3",
    "pydantic-ai>=1.99.0",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = false
